src/objects/Graphics_Pack_Example__c.object
<CustomObject>
    <description>Example object to show how Graphics could be used</description>
    <fields>
        <fullName>First_3_awards__c</fullName>
        <formula>CASE( First_3_positions__c ,
"Gold", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxb3","Gold",16,16), 
"Silver", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxb6","Silver",16,16),
"Bronze", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxb0","Bronze",16,16),
 "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First 3 Awards</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_3_medals__c</fullName>
        <formula>CASE( First_3_positions__c ,
"Gold", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxdo","Gold",16,16),
"Silver", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxdr","Silver",16,16),
"Bronze", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxdl","Bronze",16,16),
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First 3 Medals</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_3_positions__c</fullName>
        <label>First 3 Positions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                    <default>true</default>
                    <label>Bronze</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_3_currency__c</fullName>
        <formula>IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 0, IMAGE("/servlet/servlet.FileDownload?file=01530000001HxYZ", "£", 16, 16),"")
 +
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 1, IMAGE("/servlet/servlet.FileDownload?file=01530000001HxYY", "€", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 2, IMAGE("/servlet/servlet.FileDownload?file=01530000001HxYX", "$", 16, 16),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of 3 Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_3_lightbulbs__c</fullName>
        <formula>IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 0, IMAGE("/servlet/servlet.FileDownload?file=01530000001HxdW", "*", 16, 16), IMAGE("/servlet/servlet.FileDownload?file=01530000001HxdX", "-", 16, 16))
 +
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 1, IMAGE("/servlet/servlet.FileDownload?file=01530000001HxdW", "*", 16, 16), IMAGE("/servlet/servlet.FileDownload?file=01530000001HxdX", "-", 16, 16))
+
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 2, IMAGE("/servlet/servlet.FileDownload?file=01530000001HxdW", "*", 16, 16), IMAGE("/servlet/servlet.FileDownload?file=01530000001HxdX", "-", 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of 3 Lightbulbs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_3_rating__c</fullName>
        <description>How many out of 3? 3 being best 0 being worst.</description>
        <label>Out of 3 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Out_of_5_Ticks__c</fullName>
        <formula>IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 0, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxfj", "*", 16, 16), IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxc3", "-", 16, 16))
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 1, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxfj", "*", 16, 16), IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxc3", "-", 16, 16))
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 2, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxfj", "*", 16, 16), IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxc3", "-", 16, 16))
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 3, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxfj", "*", 16, 16), IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxc3", "-", 16, 16))
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 4, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxfj", "*", 16, 16), IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxc3", "-", 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of 5 Ticks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_5_deck_chair__c</fullName>
        <formula>IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 0, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 1, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 2, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 3, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 4, IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxit", "*", 16, 16),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of 5 Deck Chairs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_5_rating__c</fullName>
        <label>Out of 5 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Red_Amber_Green_Bullet__c</fullName>
        <formula>CASE(  Red_Amber_Green__c  ,
"Red", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxWF","Red",16,16),
"Amber", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxWB","Amber",16,16),
"Green", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxW9","Green",16,16),
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Amber Green Bullet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Amber_Green_Person__c</fullName>
        <formula>CASE( Red_Amber_Green__c ,
"Red", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxaQ","Red",16,16),
"Amber", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxaP","Amber",16,16),
"Green", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxaO","Green",16,16),
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Amber Green Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Amber_Green__c</fullName>
        <label>Red Amber Green</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                    <default>true</default>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Up_or_Down_Arrows__c</fullName>
        <formula>CASE(  Up_or_Down__c,
"Up", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxhW","Up",16,16),
"Down", IMAGE("/servlet/servlet.FileDownload?file=01530000001HxhU","Down",16,16),
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Up or Down Arrows</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Up_or_Down_Thumbs__c</fullName>
        <formula>CASE( Up_or_Down__c ,
"Up", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxfi","Up",16,16),
"Down", IMAGE("/servlet/servlet.FileDownload?file=01530000001Hxfh","Down",16,16),
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Up or Down Thumbs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Up_or_Down__c</fullName>
        <label>Up or Down</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                    <default>true</default>
                    <label>Up</label>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Graphics Pack Example</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graphics Pack Examples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>